manifests/deployment.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: yubico-webauthn-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: yubico-webauthn-app
    spec:
      containers:
        - name: yubico-webauthn-app
          image: payxdemo.azurecr.io/yubico-webauthn-app
          ports:
          - containerPort: 8443
