manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: webauthn-spring-service
spec:
    type: ClusterIP
    ports:
        - port: 8080
    selector:
        app: yubico-webauthn-app
